--- a/2022_10_6/ntu.html
+++ b/2022_10_6/ntu.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+        body {
+          background-color: linen;
+        }
+    
+        h1 {
+          color: maroon;
+          margin-left: 40px;
+        }
+      </style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <h1>Hi</h1>
+    <h1>台大校歌</h1>
+        <img src="https://www.ntu.edu.tw/about/doc/staff.jpg"/>
+        <p>臺大的環境鬱鬱蔥蔥</p>
+        <p>臺大的環境鬱鬱蔥蔥</p>
+        <p>臺大的氣象勃勃蓬蓬</p>
+        <p>遠望那玉山突出雲表</p>
+        <p>正象徵我們目標的高崇</p>
+        <p>近看蜿蜒的淡水</p>
+        <p>他不捨晝夜地流動</p>
+        <p>正顯示我們百折不撓的作風</p>
+        <p>這百折不撓的作風</p>
+        <p>定使我們一切事業都成功</p>
+        
 </body>
-</html>
